--- a/fly.toml
+++ b/fly.toml
@@ -1,22 +1,52 @@
-# fly.toml app configuration file generated for snatched-crawler on 2024-10-31T15:07:22Z
-#
-# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
-#
-
-app = 'snatched-crawler'
-primary_region = 'bom'
+app = "snatched-crawler-morning-firefly-8195"
+primary_region = "bom"
 
 [build]
+  dockerfile = "Dockerfile"
+
+[env]
+  PORT = "5000"
+  FLASK_APP = "server"
+  FLASK_ENV = "production"
+  PYTHONUNBUFFERED = "1"
 
 [http_service]
-  internal_port = 80
+  internal_port = 5000
   force_https = true
-  auto_stop_machines = 'stop'
+  auto_stop_machines = "stop"
   auto_start_machines = true
   min_machines_running = 0
-  processes = ['app']
+  processes = ["app"]
+
+  [[http_service.checks]]
+    interval = "30s"
+    timeout = "5s"
+    grace_period = "10s"
+    method = "GET"
+    path = "/health"
+    protocol = "http"
+    tls_skip_verify = false
+
+# Celery worker configuration
+[[services]]
+  protocol = "tcp"
+  internal_port = 5000
+  processes = ["celery"]
+
+  [services.concurrency]
+    type = "connections"
+    hard_limit = 25
+    soft_limit = 20
+
+  [[services.ports]]
+    handlers = ["http"]
+    port = "5000"
 
 [[vm]]
-  memory = '1gb'
-  cpu_kind = 'shared'
+  memory = "1gb"
+  cpu_kind = "shared"
   cpus = 1
+
+[processes]
+  app = "flask --app server run --host 0.0.0.0 --debug"
+  celery = "celery -A celery_app.celery worker --loglevel=info"
